@@ -9,9 +9,3 @@ dependencies {
 
   testImplementation(project(":instrumentation:rxjava:rxjava-2.0:testing"))
 }
-
-tasks.withType<Test>().configureEach {
-  // required on jdk17, uses spock Mock that needs access to jdk internals
-  jvmArgs("--add-opens=java.base/java.lang.invoke=ALL-UNNAMED")
-  jvmArgs("-XX:+IgnoreUnrecognizedVMOptions")
-}
